@@ -7,27 +7,32 @@ import com.hypixel.hytale.codec.codecs.array.ArrayCodec;
 import com.hypixel.hytale.codec.util.RawJsonReader;
 import com.hypixel.hytale.common.plugin.PluginIdentifier;
 import com.hypixel.hytale.common.plugin.PluginManifest;
-import com.hypixel.hytale.common.semver.Semver;
 import com.hypixel.hytale.common.semver.SemverRange;
 import com.hypixel.hytale.common.util.java.ManifestUtil;
 import com.hypixel.hytale.component.ComponentType;
 import com.hypixel.hytale.event.IEventDispatcher;
 import com.hypixel.hytale.logger.HytaleLogger;
 import com.hypixel.hytale.metrics.MetricsRegistry;
+import com.hypixel.hytale.server.core.Constants;
 import com.hypixel.hytale.server.core.HytaleServer;
 import com.hypixel.hytale.server.core.HytaleServerConfig;
+import com.hypixel.hytale.server.core.Message;
 import com.hypixel.hytale.server.core.Options;
 import com.hypixel.hytale.server.core.ShutdownReason;
 import com.hypixel.hytale.server.core.asset.AssetModule;
 import com.hypixel.hytale.server.core.command.system.CommandManager;
+import com.hypixel.hytale.server.core.entity.entities.Player;
+import com.hypixel.hytale.server.core.event.events.player.AddPlayerToWorldEvent;
 import com.hypixel.hytale.server.core.plugin.commands.PluginCommand;
 import com.hypixel.hytale.server.core.plugin.event.PluginSetupEvent;
 import com.hypixel.hytale.server.core.plugin.pending.PendingLoadJavaPlugin;
 import com.hypixel.hytale.server.core.plugin.pending.PendingLoadPlugin;
+import com.hypixel.hytale.server.core.universe.PlayerRef;
 import com.hypixel.hytale.server.core.universe.world.storage.EntityStore;
 import it.unimi.dsi.fastutil.objects.Object2ObjectLinkedOpenHashMap;
 import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
+import java.awt.Color;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -40,9 +45,12 @@ import java.net.URLClassLoader;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
+import java.nio.file.FileSystem;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.time.Duration;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
@@ -70,13 +78,14 @@ public class PluginManager {
       );
    private static PluginManager instance;
    @Nonnull
-   private final PluginClassLoader corePluginClassLoader = new PluginClassLoader(this, true);
+   private final PluginClassLoader corePluginClassLoader = new PluginClassLoader(this, null, true);
    @Nonnull
    private final List<PendingLoadPlugin> corePlugins = new ObjectArrayList<>();
    private final PluginManager.PluginBridgeClassLoader bridgeClassLoader = new PluginManager.PluginBridgeClassLoader(this, PluginManager.class.getClassLoader());
    private final ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
    private final Map<PluginIdentifier, PluginBase> plugins = new Object2ObjectLinkedOpenHashMap<>();
    private final Map<Path, PluginClassLoader> classLoaders = new ConcurrentHashMap<>();
+   private boolean hasOutdatedPlugins = false;
    private final boolean loadExternalPlugins = true;
    @Nonnull
    private PluginState state = PluginState.NONE;
@@ -183,10 +192,34 @@ public class PluginManager {
          this.lock.readLock().unlock();
       }
 
+      if (this.hasOutdatedPlugins && System.getProperty("hytale.allow_outdated_mods") == null) {
+         LOGGER.at(Level.SEVERE)
+            .log("One or more plugins are targeting a different server version. It is recommended to update these plugins to ensure compatibility.");
+
+         try {
+            if (!Constants.SINGLEPLAYER) {
+               Thread.sleep(Duration.ofSeconds(2L));
+            }
+         } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+         }
+
+         HytaleServer.get().getEventBus().registerGlobal(AddPlayerToWorldEvent.class, event -> {
+            PlayerRef playerRef = event.getHolder().getComponent(PlayerRef.getComponentType());
+            Player player = event.getHolder().getComponent(Player.getComponentType());
+            if (playerRef != null && player != null) {
+               if (player.hasPermission("hytale.mods.outdated.notify")) {
+                  playerRef.sendMessage(Message.translation("server.pluginManager.outOfDatePlugins").color(Color.RED));
+               }
+            }
+         });
+      }
+
       this.loadOrder = PendingLoadPlugin.calculateLoadOrder(pending);
       this.loading = new Object2ObjectOpenHashMap<>();
       pending.forEach((identifier, pendingLoad) -> this.availablePlugins.put(identifier, pendingLoad.getManifest()));
-      ObjectArrayList var24 = new ObjectArrayList();
+      ObjectArrayList<CompletableFuture<Void>> preLoadFutures = new ObjectArrayList<>();
+      ObjectArrayList<PluginIdentifier> failedBootPlugins = new ObjectArrayList<>();
       this.lock.writeLock().lock();
 
       try {
@@ -194,26 +227,55 @@ public class PluginManager {
 
          for (PendingLoadPlugin pendingLoadPlugin : this.loadOrder) {
             LOGGER.at(Level.FINE).log("- %s", pendingLoadPlugin.getIdentifier());
-            PluginBase plugin = pendingLoadPlugin.load();
-            if (plugin != null) {
+
+            try {
+               PluginBase plugin = pendingLoadPlugin.load();
                this.plugins.put(plugin.getIdentifier(), plugin);
                this.loading.put(plugin.getIdentifier(), plugin);
                CompletableFuture<Void> future = plugin.preLoad();
                if (future != null) {
-                  var24.add(future);
+                  preLoadFutures.add(future);
                }
+            } catch (ClassNotFoundException e) {
+               LOGGER.at(Level.SEVERE).withCause(e).log("Failed to load plugin %s. Failed to find main class!", pendingLoadPlugin.getPath());
+               failedBootPlugins.add(pendingLoadPlugin.getIdentifier());
+            } catch (NoSuchMethodException e) {
+               LOGGER.at(Level.SEVERE).withCause(e).log("Failed to load plugin %s. Requires default constructor!", pendingLoadPlugin.getPath());
+               failedBootPlugins.add(pendingLoadPlugin.getIdentifier());
+            } catch (Throwable e) {
+               LOGGER.at(Level.SEVERE).withCause(e).log("Failed to load plugin %s", pendingLoadPlugin.getPath());
+               failedBootPlugins.add(pendingLoadPlugin.getIdentifier());
             }
          }
       } finally {
          this.lock.writeLock().unlock();
       }
 
-      CompletableFuture.allOf(var24.toArray(CompletableFuture[]::new)).join();
+      if (!failedBootPlugins.isEmpty() && !Constants.shouldSkipModValidation()) {
+         StringBuilder sb = new StringBuilder("Failed to boot the following plugins:\n");
 
-      for (PendingLoadPlugin pendingPlugin : this.loadOrder) {
-         PluginBase plugin = this.loading.get(pendingPlugin.getIdentifier());
-         if (plugin != null && !this.setup(plugin)) {
-            this.loading.remove(pendingPlugin.getIdentifier());
+         for (PluginIdentifier failed : failedBootPlugins) {
+            sb.append(" - ").append(failed).append('\n');
+         }
+
+         HytaleServer.get().shutdownServer(ShutdownReason.MOD_ERROR.withMessage(sb.toString().trim()));
+      } else {
+         CompletableFuture.allOf(preLoadFutures.toArray(CompletableFuture[]::new)).join();
+         boolean hasFailed = false;
+
+         for (PendingLoadPlugin pendingPlugin : this.loadOrder) {
+            PluginBase plugin = this.loading.get(pendingPlugin.getIdentifier());
+            if (plugin != null && !this.setup(plugin)) {
+               hasFailed = true;
+            }
+         }
+
+         if (!Constants.shouldSkipModValidation() && hasFailed) {
+            StringBuilder sb = new StringBuilder("Failed to setup the following plugins:\n");
+            this.collectFailedPlugins(sb);
+            HytaleServer.get().shutdownServer(ShutdownReason.MOD_ERROR.withMessage(sb.toString().trim()));
+         } else {
+            this.loading.values().removeIf(v -> v.getState().isInactive());
          }
       }
    }
@@ -224,16 +286,15 @@ public class PluginManager {
       }
 
       this.state = PluginState.START;
+      boolean hasFailed = false;
 
       for (PendingLoadPlugin pendingPlugin : this.loadOrder) {
          PluginBase plugin = this.loading.get(pendingPlugin.getIdentifier());
          if (plugin != null && !this.start(plugin)) {
-            this.loading.remove(pendingPlugin.getIdentifier());
+            hasFailed = true;
          }
       }
 
-      this.loadOrder = null;
-      this.loading = null;
       StringBuilder sb = new StringBuilder();
 
       for (Entry<PluginIdentifier, HytaleServerConfig.ModConfig> entry : HytaleServer.get().getConfig().getModConfig().entrySet()) {
@@ -242,7 +303,6 @@ public class PluginManager {
          SemverRange requiredVersion = modConfig.getRequiredVersion();
          if (requiredVersion != null && !this.hasPlugin(identifier, requiredVersion)) {
             sb.append(String.format("%s, Version: %s\n", identifier, modConfig));
-            return;
          }
       }
 
@@ -250,6 +310,25 @@ public class PluginManager {
          String msg = "Failed to start server! Missing Mods:\n" + sb;
          LOGGER.at(Level.SEVERE).log(msg);
          HytaleServer.get().shutdownServer(ShutdownReason.MISSING_REQUIRED_PLUGIN.withMessage(msg));
+      } else if (hasFailed && !Constants.shouldSkipModValidation()) {
+         sb = new StringBuilder("Failed to start the following plugins:\n");
+         this.collectFailedPlugins(sb);
+         HytaleServer.get().shutdownServer(ShutdownReason.MOD_ERROR.withMessage(sb.toString().trim()));
+      } else {
+         this.loadOrder = null;
+         this.loading = null;
+      }
+   }
+
+   private void collectFailedPlugins(StringBuilder sb) {
+      if (this.loading != null) {
+         for (Entry<PluginIdentifier, PluginBase> failed : this.loading.entrySet()) {
+            if (failed.getValue().getState() == PluginState.FAILED) {
+               Throwable reasonThrowable = failed.getValue().getFailureCause();
+               String reason = reasonThrowable != null ? reasonThrowable.toString() : "Unknown";
+               sb.append(" - ").append(failed.getKey()).append(": ").append(reason).append('\n');
+            }
+         }
       }
    }
 
@@ -288,12 +367,27 @@ public class PluginManager {
    }
 
    private void validatePluginDeps(@Nonnull PendingLoadPlugin pendingLoadPlugin, @Nullable Map<PluginIdentifier, PendingLoadPlugin> pending) {
-      Semver serverVersion = ManifestUtil.getVersion();
-      SemverRange serverVersionRange = pendingLoadPlugin.getManifest().getServerVersion();
-      if (serverVersionRange != null && serverVersion != null && !serverVersionRange.satisfies(serverVersion)) {
-         throw new MissingPluginDependencyException(
-            String.format("Failed to load '%s' because version of server does not satisfy '%s'! ", pendingLoadPlugin.getIdentifier(), serverVersion)
-         );
+      String serverVersion = ManifestUtil.getVersion();
+      if (!pendingLoadPlugin.getManifest().getGroup().equals("Hytale")) {
+         String targetServerVersion = pendingLoadPlugin.getManifest().getServerVersion();
+         if (targetServerVersion == null || serverVersion != null && !targetServerVersion.equals(serverVersion)) {
+            if (targetServerVersion != null && !"*".equals(targetServerVersion)) {
+               LOGGER.at(Level.WARNING)
+                  .log(
+                     "Plugin '%s' targets a different server version %s. You may encounter issues, please check for plugin updates.",
+                     pendingLoadPlugin.getIdentifier(),
+                     serverVersion
+                  );
+            } else {
+               LOGGER.at(Level.WARNING)
+                  .log(
+                     "Plugin '%s' does not specify a target server version. You may encounter issues, please check for plugin updates. This will be a hard error in the future",
+                     pendingLoadPlugin.getIdentifier()
+                  );
+            }
+
+            this.hasOutdatedPlugins = true;
+         }
       }
 
       for (Entry<PluginIdentifier, SemverRange> entry : pendingLoadPlugin.getManifest().getDependencies().entrySet()) {
@@ -374,26 +468,34 @@ public class PluginManager {
 
    @Nullable
    private PendingLoadJavaPlugin loadPendingJavaPlugin(@Nonnull Path file) {
-      try {
-         URL url = file.toUri().toURL();
-         PluginClassLoader pluginClassLoader = this.classLoaders.computeIfAbsent(file, path -> new PluginClassLoader(this, false, url));
-         URL resource = pluginClassLoader.findResource("manifest.json");
-         if (resource == null) {
+      try (FileSystem fs = FileSystems.newFileSystem(file)) {
+         Path resource = fs.getPath("manifest.json");
+         if (!Files.exists(resource)) {
             LOGGER.at(Level.SEVERE).log("Failed to load pending plugin from '%s'. Failed to load manifest file!", file.toString());
             return null;
          }
 
+         PluginManifest manifest;
          try (
-            InputStream stream = resource.openStream();
+            InputStream stream = Files.newInputStream(resource);
             InputStreamReader reader = new InputStreamReader(stream, StandardCharsets.UTF_8);
          ) {
             char[] buffer = RawJsonReader.READ_BUFFER.get();
             RawJsonReader rawJsonReader = new RawJsonReader(reader, buffer);
             ExtraInfo extraInfo = ExtraInfo.THREAD_LOCAL.get();
-            PluginManifest manifest = PluginManifest.CODEC.decodeJson(rawJsonReader, extraInfo);
+            manifest = PluginManifest.CODEC.decodeJson(rawJsonReader, extraInfo);
+            if (manifest == null) {
+               LOGGER.at(Level.SEVERE).log("Failed to load pending plugin from '%s'. Failed to decode manifest file!", file.toString());
+               return null;
+            }
+
             extraInfo.getValidationResults().logOrThrowValidatorExceptions(LOGGER);
-            return new PendingLoadJavaPlugin(file, manifest, pluginClassLoader);
          }
+
+         URL url = file.toUri().toURL();
+         PluginClassLoader pluginClassLoader = this.classLoaders
+            .computeIfAbsent(file, path -> new PluginClassLoader(this, new PluginIdentifier(manifest), false, url));
+         return new PendingLoadJavaPlugin(file, manifest, pluginClassLoader);
       } catch (MalformedURLException e) {
          LOGGER.at(Level.SEVERE).withCause(e).log("Failed to load pending plugin from '%s'. Failed to create URLClassLoader!", file.toString());
       } catch (IOException e) {
@@ -425,27 +527,36 @@ public class PluginManager {
                   ExtraInfo extraInfo = ExtraInfo.THREAD_LOCAL.get();
                   PluginManifest manifest = PluginManifest.CODEC.decodeJson(rawJsonReader, extraInfo);
                   extraInfo.getValidationResults().logOrThrowValidatorExceptions(LOGGER);
-                  PendingLoadJavaPlugin plugin;
-                  if (connection instanceof JarURLConnection jarURLConnection) {
-                     URL classpathUrl = jarURLConnection.getJarFileURL();
-                     Path path = Path.of(classpathUrl.toURI());
-                     PluginClassLoader pluginClassLoader = this.classLoaders.computeIfAbsent(path, f -> new PluginClassLoader(this, true, classpathUrl));
-                     plugin = new PendingLoadJavaPlugin(path, manifest, pluginClassLoader);
-                  } else {
-                     URI pluginUri = manifestUrl.toURI().resolve(".");
-                     Path path = Paths.get(pluginUri);
-                     URL classpathUrl = pluginUri.toURL();
-                     PluginClassLoader pluginClassLoader = this.classLoaders.computeIfAbsent(path, f -> new PluginClassLoader(this, true, classpathUrl));
-                     plugin = new PendingLoadJavaPlugin(path, manifest, pluginClassLoader);
+                  if (manifest != null) {
+                     PendingLoadJavaPlugin plugin;
+                     if (connection instanceof JarURLConnection jarURLConnection) {
+                        URL classpathUrl = jarURLConnection.getJarFileURL();
+                        Path path = Path.of(classpathUrl.toURI());
+                        PluginClassLoader pluginClassLoader = this.classLoaders
+                           .computeIfAbsent(path, f -> new PluginClassLoader(this, new PluginIdentifier(manifest), true, classpathUrl));
+                        plugin = new PendingLoadJavaPlugin(path, manifest, pluginClassLoader);
+                     } else {
+                        URI pluginUri = manifestUrl.toURI().resolve(".");
+                        Path path = Paths.get(pluginUri);
+                        URL classpathUrl = pluginUri.toURL();
+                        PluginClassLoader pluginClassLoader = this.classLoaders
+                           .computeIfAbsent(path, f -> new PluginClassLoader(this, new PluginIdentifier(manifest), true, classpathUrl));
+                        plugin = new PendingLoadJavaPlugin(path, manifest, pluginClassLoader);
+                     }
+
+                     LOGGER.at(Level.INFO).log("- %s", plugin.getIdentifier());
+                     if (this.canLoadOnBoot(plugin)) {
+                        loadPendingPlugin(pending, plugin);
+                     } else {
+                        rejectedBootList.put(plugin.getIdentifier(), plugin.getManifest());
+                     }
+                     continue;
                   }
 
-                  LOGGER.at(Level.INFO).log("- %s", plugin.getIdentifier());
-                  if (this.canLoadOnBoot(plugin)) {
-                     loadPendingPlugin(pending, plugin);
-                  } else {
-                     rejectedBootList.put(plugin.getIdentifier(), plugin.getManifest());
-                  }
+                  LOGGER.at(Level.SEVERE).log("Failed to load pending plugin from '%s'. Failed to decode manifest file!", manifestUrl);
                }
+
+               return;
             }
 
             URL manifestsUrl = classLoader.getResource("manifests.json");
@@ -461,7 +572,7 @@ public class PluginManager {
                   extraInfo.getValidationResults().logOrThrowValidatorExceptions(LOGGER);
                   URL url = uri.toURL();
                   Path path = Paths.get(uri);
-                  PluginClassLoader pluginClassLoader = this.classLoaders.computeIfAbsent(path, f -> new PluginClassLoader(this, true, url));
+                  PluginClassLoader pluginClassLoader = this.classLoaders.computeIfAbsent(path, f -> new PluginClassLoader(this, null, true, url));
 
                   for (PluginManifest manifest : manifests) {
                      PendingLoadJavaPlugin plugin = new PendingLoadJavaPlugin(path, manifest, pluginClassLoader);
@@ -593,7 +704,7 @@ public class PluginManager {
                PluginManifest manifest = PluginManifest.CODEC.decodeJson(rawJsonReader, extraInfo);
                extraInfo.getValidationResults().logOrThrowValidatorExceptions(LOGGER);
                if (new PluginIdentifier(manifest).equals(identifier)) {
-                  PluginClassLoader pluginClassLoader = new PluginClassLoader(this, true, uri.toURL());
+                  PluginClassLoader pluginClassLoader = new PluginClassLoader(this, identifier, true, uri.toURL());
                   PendingLoadJavaPlugin plugin = new PendingLoadJavaPlugin(Paths.get(uri), manifest, pluginClassLoader);
                   return this.load(plugin);
                }
@@ -614,7 +725,7 @@ public class PluginManager {
 
                for (PluginManifest manifest : manifests) {
                   if (new PluginIdentifier(manifest).equals(identifier)) {
-                     PluginClassLoader pluginClassLoader = new PluginClassLoader(this, true, uri.toURL());
+                     PluginClassLoader pluginClassLoader = new PluginClassLoader(this, identifier, true, uri.toURL());
                      PendingLoadJavaPlugin plugin = new PendingLoadJavaPlugin(Paths.get(uri), manifest, pluginClassLoader);
                      return this.load(plugin);
                   }
@@ -711,9 +822,9 @@ public class PluginManager {
          return false;
       }
 
-      this.validatePluginDeps(pendingLoadPlugin, null);
-      PluginBase plugin = pendingLoadPlugin.load();
-      if (plugin != null) {
+      try {
+         this.validatePluginDeps(pendingLoadPlugin, null);
+         PluginBase plugin = pendingLoadPlugin.load();
          this.lock.writeLock().lock();
 
          try {
@@ -730,13 +841,23 @@ public class PluginManager {
          }
 
          preload.thenAccept(v -> {
-            this.setup(plugin);
-            this.start(plugin);
-            this.pluginListPageManager.notifyPluginChange(this.plugins, plugin.getIdentifier());
+            if (!this.setup(plugin)) {
+               this.pluginListPageManager.notifyPluginChange(this.plugins, plugin.getIdentifier());
+            } else if (!this.start(plugin)) {
+               this.pluginListPageManager.notifyPluginChange(this.plugins, plugin.getIdentifier());
+            } else {
+               this.pluginListPageManager.notifyPluginChange(this.plugins, plugin.getIdentifier());
+            }
          });
+         this.pluginListPageManager.notifyPluginChange(this.plugins, pendingLoadPlugin.getIdentifier());
+      } catch (ClassNotFoundException e) {
+         LOGGER.at(Level.SEVERE).withCause(e).log("Failed to load plugin %s. Failed to find main class!", pendingLoadPlugin.getPath());
+      } catch (NoSuchMethodException e) {
+         LOGGER.at(Level.SEVERE).withCause(e).log("Failed to load plugin %s. Requires default constructor!", pendingLoadPlugin.getPath());
+      } catch (Throwable e) {
+         LOGGER.at(Level.SEVERE).withCause(e).log("Failed to load plugin %s", pendingLoadPlugin.getPath());
       }
 
-      this.pluginListPageManager.notifyPluginChange(this.plugins, pendingLoadPlugin.getIdentifier());
       return false;
    }
 
@@ -745,11 +866,16 @@ public class PluginManager {
          LOGGER.at(Level.FINE).log("Setting up plugin %s", plugin.getIdentifier());
          boolean prev = AssetStore.DISABLE_DYNAMIC_DEPENDENCIES;
          AssetStore.DISABLE_DYNAMIC_DEPENDENCIES = false;
-         plugin.setup0();
-         AssetStore.DISABLE_DYNAMIC_DEPENDENCIES = prev;
+
+         try {
+            plugin.setup0();
+         } finally {
+            AssetStore.DISABLE_DYNAMIC_DEPENDENCIES = prev;
+         }
+
          AssetModule.get().initPendingStores();
          HytaleServer.get().doneSetup(plugin);
-         if (plugin.getState() != PluginState.DISABLED) {
+         if (!plugin.getState().isInactive()) {
             IEventDispatcher<PluginSetupEvent, PluginSetupEvent> dispatch = HytaleServer.get()
                .getEventBus()
                .dispatchFor(PluginSetupEvent.class, (Class<? extends PluginBase>)plugin.getClass());
@@ -775,7 +901,7 @@ public class PluginManager {
          LOGGER.at(Level.FINE).log("Starting plugin %s", plugin.getIdentifier());
          plugin.start0();
          HytaleServer.get().doneStart(plugin);
-         if (plugin.getState() != PluginState.DISABLED) {
+         if (!plugin.getState().isInactive()) {
             LOGGER.at(Level.INFO).log("Enabled plugin %s", plugin.getIdentifier());
             return true;
          }
@@ -796,6 +922,7 @@ public class PluginManager {
          if (dependency == null || dependency.getState() != requiredState) {
             LOGGER.at(Level.SEVERE).log(plugin.getName() + " is lacking dependency " + dependencyOnManifest.getName() + " at stage " + stage);
             LOGGER.at(Level.SEVERE).log(plugin.getName() + " DISABLED!");
+            plugin.setFailureCause(new Exception("Missing dependency " + dependencyOnManifest.getName()));
             return false;
          }
       }
@@ -805,7 +932,7 @@ public class PluginManager {
 
    private static void loadPendingPlugin(@Nonnull Map<PluginIdentifier, PendingLoadPlugin> pending, @Nonnull PendingLoadPlugin plugin) {
       if (pending.putIfAbsent(plugin.getIdentifier(), plugin) != null) {
-         throw new IllegalArgumentException("Tried to load duplicate plugin");
+         throw new IllegalArgumentException("Tried to load duplicate plugin: " + plugin.getIdentifier());
       }
 
       for (PendingLoadPlugin subPlugin : plugin.createSubPendingLoadPlugins()) {
